# floppa-files

./: .gitignore  .gitmodules  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  config.toml  logfile  settings.toml  tailwind.config.js
cli/: main.rs
files/: balls  fart.sh  qP-3eKNS.floppanl.ovpn
src/: config.rs  index.hbs  log.rs  main.rs  web.rs
static/: index.js  main.css  qrcode.min.js  tos.html
templates/: base.html  home.html  main.css  tos.html
