[package]
name = "floppa-files"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "cli/main.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["macros"] }
bincode = "1.3.3"
futures= "0.3.29"
hyper = { version = "0.14.27", features = ["full"] }
nanoid = "0.4.0"
qrcode-generator = "4.1.9"
serde = { version = "1.0.190", features = ["serde_derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "fs", "full"] }
tokio-util = "0.7.10"
toml = "0.8.6"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }

[profile.meow]
inherits = "release"
opt-level = 3
debug = 0
lto = "fat"
codegen-units = 0
