[package]
name = "floppa-files"
version = "4.20.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.1", features = ["macros"] }
axum-client-ip = "0.5.0"
blake3 = { version = "1.5.1", features = ["mmap", "serde"] }
chrono = "0.4.33"
futures = "0.3.30"
nanoid = "0.4.0"
qrcode-generator = "4.1.9"
serde = { version = "1.0.190", features = ["serde_derive"] }
thiserror = "1.0.56"
tokio = { version = "1.33.0", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7.10"
toml = "0.8.6"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "compression-gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
strip = true
