[package]
name = "floppa-files"
version = "4.20.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
axum-client-ip = "0.5"
blake3 = { version = "1.5", features = ["mmap"] }
futures = "0.3"
nanoid = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
